--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Berry - React Material Admin Dashboard Template</title>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <title>Targeted Ads</title>
+    <link rel="icon" href="%PUBLIC_URL%/logo-white.svg" />
     <!-- Meta Tags-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
